--- a/css/style.css
+++ b/css/style.css
@@ -117,10 +117,13 @@ nav {
   /* background-image: linear-gradient(to right, #2948e6, #3791de); */
   box-shadow: 0 5px 32px rgba(11, 11, 11, 0.3);
   transition: background 0.6s ease-in-out;
+  position: fixed;
 }
 nav .logo {
   width: 80px;
+  transition: var(--transition);
 }
+
 .nav-container {
   display: flex;
   justify-content: space-between;
@@ -139,9 +142,7 @@ nav .logo {
   font-size: 24px;
   transition: var(--transition);
 }
-.nav-links li a:hover {
-  color: #fca542;
-}
+
 .btn-sm {
   /* font-size: 16px; */
   border-radius: 20px;
@@ -161,7 +162,9 @@ nav .logo {
   justify-content: center;
   font-size: 24px;
   cursor: pointer;
+  transition: var(--transition);
 }
+
 .btn-mobile-nav {
   display: none;
 }
@@ -451,10 +454,14 @@ nav .logo {
   position: absolute;
   top: 5px;
   right: 50px;
-  font-size: 42px;
+  font-size: 52px;
   cursor: pointer;
   border: none;
   background: none;
+}
+.btn-close-modal:hover {
+  transform: rotate(5deg);
+  opacity: 0.5;
 }
 .hidden {
   display: none;
