--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,11 @@ body {
 
 section {
   margin: 150px 0;
+  transition: transform 2s, opacity 1s;
+}
+.section-hidden {
+  transform: translateY(100px);
+  opacity: 0;
 }
 section h2 {
   font-size: 52px;
@@ -211,6 +216,7 @@ nav .logo {
   height: 100%;
   filter: drop-shadow(0px 20px 3px rgba(0, 0, 0, 0.1));
 }
+
 /* //////////// HERO ENDS////////////////////////////////// */
 /* ////////////////////////////////////////////////////////////////////////////// */
 /* //////////// FEATURE STARTS////////////////////////////////// */
@@ -324,6 +330,7 @@ nav .logo {
   background-color: #fff;
   border-radius: 12px;
   overflow: hidden;
+  box-shadow: 0 20px 40px rgba(0, 0, 0, 0.3);
 }
 .business .biz-img {
   height: 300px;
@@ -411,7 +418,7 @@ nav .logo {
   width: 100%;
   background-color: var(--text-color);
   padding: 50px;
-  box-shadow: 0 4rem 6rem rgba(0, 0, 0, 0.3);
+  box-shadow: 0 40px 60px rgba(0, 0, 0, 0.3);
   z-index: 1000;
   transition: all 0.5s ease-in-out;
 }
