--- a/css/style.css
+++ b/css/style.css
@@ -72,11 +72,11 @@ h1 {
 }
 h4,
 h5 {
-  font-size: 24px;
+  font-size: 20px;
 }
 
 p {
-  font-size: 18px;
+  font-size: 16px;
 }
 .btn {
   display: inline-block;
@@ -88,7 +88,7 @@ p {
   border: none;
   text-align: center;
   /* border-radius: 8px; */
-  font-size: 24px;
+  font-size: 18px;
   border-radius: 20px;
 }
 
@@ -144,7 +144,7 @@ nav .logo {
 .nav-links li a {
   color: var(--text-color);
   display: block;
-  font-size: 24px;
+  font-size: 18px;
   transition: var(--transition);
 }
 
@@ -165,7 +165,7 @@ nav .logo {
   gap: 5px;
   align-items: center;
   justify-content: center;
-  font-size: 24px;
+  font-size: 18px;
   cursor: pointer;
   transition: var(--transition);
 }
@@ -196,7 +196,6 @@ nav .logo {
 }
 
 .hero-left .heading {
-  font-size: 52px;
   font-weight: 600;
   line-height: 1.2;
   color: var(--text-color);
@@ -205,7 +204,6 @@ nav .logo {
 .hero-left .text {
   color: #eef5fd;
   margin-bottom: 24px;
-  font-size: 24px;
 }
 .hero-btn {
   display: flex;
@@ -238,10 +236,22 @@ nav .logo {
 
 .feature-left {
   object-fit: contain;
-  overflow: hidden;
+  /* overflow: hidden; */
+  position: relative;
+  border: 10px solid var(--text-color);
+}
+.feature-left::after {
+  content: "";
+  position: absolute;
+  top: -20px;
+  left: -20px;
+  border: 1px solid rgba(153, 153, 153, 0.633);
+  height: 100%;
+  width: 100%;
+  z-index: -1;
 }
 .feature-left img {
-  height: 100%;
+  /* height: 100%; */
   width: 100%;
 }
 .feature-right {
@@ -333,7 +343,7 @@ nav .logo {
   box-shadow: 0 20px 40px rgba(0, 0, 0, 0.3);
 }
 .business .biz-img {
-  height: 300px;
+  height: 200px;
 }
 .business .biz-img img {
   filter: blur(1px);
@@ -349,7 +359,7 @@ nav .logo {
   margin-top: 15px;
 }
 .business .biz-content h4 {
-  font-size: 24px;
+  font-size: 20px;
   padding-bottom: 8px;
   color: #888;
 }
@@ -396,14 +406,13 @@ nav .logo {
 }
 .ans p {
   padding: 0 10px;
-  font-size: 18px;
   line-height: 1.8;
 }
 .open .icon {
-  transform: rotate(-180deg);
+  transform: rotate(-90deg);
 }
 .open h5 {
-  font-size: 28px;
+  font-size: 22px;
 }
 .open .ans {
   display: block;
@@ -417,14 +426,26 @@ nav .logo {
   max-width: 600px;
   width: 100%;
   background-color: var(--text-color);
-  padding: 50px;
+  padding: 20px 50px;
   box-shadow: 0 40px 60px rgba(0, 0, 0, 0.3);
   z-index: 1000;
-  transition: all 0.5s ease-in-out;
+  transition: all 0.5s;
+}
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(4px);
+  z-index: 100;
+  transition: all 0.5s;
 }
 .modal h2 {
   color: #fca542;
   margin-bottom: 24px;
+  font-size: 52px;
 }
 
 .modal__form .names {
@@ -447,11 +468,11 @@ nav .logo {
 .modal__form input,
 .modal__form textarea {
   font-size: 1.7rem;
-  padding: 15px;
+  padding: 10px;
   border: 1px solid #ddd;
   border-radius: 5px;
   width: 100%;
-  margin-bottom: 18px;
+  margin-bottom: 12px;
 }
 
 .modal__form .btn {
@@ -472,16 +493,4 @@ nav .logo {
 }
 .hidden {
   display: none;
-}
-
-.overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  backdrop-filter: blur(4px);
-  z-index: 100;
-  transition: all 0.5s;
 }
