--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ html {
 }
 body {
   font-family: "Rubik", sans-serif;
-  line-height: 1.7;
+  line-height: 1.6;
   background-color: #eef5fd;
 }
 
@@ -370,6 +370,10 @@ nav .logo {
 .accordions {
   padding: 10px 0;
 }
+.accd {
+  color: #fca542;
+  margin-bottom: 24px;
+}
 .accordion-container {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -493,4 +497,231 @@ nav .logo {
 }
 .hidden {
   display: none;
+}
+/* slides */
+.slider {
+  max-width: 80%;
+  height: 500px;
+  margin: 0 auto;
+  position: relative;
+  overflow: hidden;
+}
+.slide {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 500px;
+  transition: transform 1s;
+}
+.slider__btn {
+  position: absolute;
+  top: 50%;
+  z-index: 10;
+
+  border: none;
+  background: rgba(255, 255, 255, 0.7);
+  font-family: inherit;
+  color: #333;
+  border-radius: 50%;
+  height: 55px;
+  width: 55px;
+  font-size: 32px;
+  cursor: pointer;
+}
+.slider__btn--left {
+  left: 6%;
+  transform: translate(-50%, -50%);
+}
+
+.slider__btn--right {
+  right: 6%;
+  transform: translate(50%, -50%);
+}
+.author {
+  display: flex;
+  align-items: center;
+  gap: 14px;
+  margin-top: 32px;
+  margin-left: 30px;
+}
+.slide--content-head {
+  margin-bottom: 24px;
+  font-size: 32px;
+  font-weight: 400;
+  color: #787878;
+}
+.slide--content-text {
+  font-size: 16px;
+  color: #787878;
+}
+.dots {
+  position: absolute;
+  bottom: 5%;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+}
+
+.dots__dot {
+  border: none;
+  background-color: #b9b9b9;
+  opacity: 0.7;
+  height: 1rem;
+  width: 1rem;
+  border-radius: 50%;
+  margin-right: 1.75rem;
+  cursor: pointer;
+  transition: all 0.5s;
+
+  /* Only necessary when overlying images */
+  /* box-shadow: 0 0.6rem 1.5rem rgba(0, 0, 0, 0.7); */
+}
+
+.dots__dot:last-child {
+  margin: 0;
+}
+
+.dots__dot--active {
+  /* background-color: #fff; */
+  background-color: #888;
+  opacity: 1;
+}
+.author-name {
+  font-size: 18px;
+  font-style: normal;
+  color: #2948e6;
+}
+.job {
+  font-style: normal;
+  color: #bb4e0a;
+  font-size: 12px;
+}
+.author img {
+  border-radius: 50%;
+  width: 80px;
+}
+
+@media screen and (max-width: 1200px) {
+  .container {
+    max-width: var(--container-width-medium);
+  }
+
+  .features-container {
+    grid-template-columns: 1fr 1fr;
+    gap: 24px;
+  }
+
+  section h2,
+  .features h1 {
+    font-size: 32px;
+  }
+}
+@media screen and (max-width: 1108px) {
+  p {
+    font-size: 14px;
+  }
+  .question h5 {
+    font-size: 16px;
+    font-weight: 300px;
+  }
+  .question p {
+    font-size: 14px;
+  }
+}
+@media screen and (max-width: 938px) {
+  h1 {
+    font-size: 32px;
+  }
+  .btn {
+    font-size: 14px;
+  }
+  .question h5 {
+    font-size: 14px;
+    font-weight: 300px;
+  }
+  .question p {
+    font-size: 13px;
+  }
+}
+
+@media screen and (max-width: 858px) {
+  .question h5 {
+    font-size: 12px;
+    font-weight: 500px;
+  }
+  .question p {
+    font-size: 12px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .hero-container {
+    grid-template-columns: 1fr;
+    align-items: center;
+    justify-items: center;
+    text-align: center;
+    position: relative;
+    padding: 60px 0;
+  }
+  .hero-left {
+    width: 80%;
+  }
+  h1 {
+    font-size: 42px;
+  }
+  .text {
+    font-size: 24px;
+    line-height: 1.9;
+  }
+  .hero-right {
+    gap: 0;
+    margin-top: -100px;
+    padding-bottom: 100px;
+    width: 80%;
+  }
+  .hero-right img {
+    width: 100%;
+    /* transform: translateX(10%); */
+  }
+
+  .btn1 {
+    display: none;
+  }
+  .btn-mobile {
+    width: 60%;
+    font-size: 24px;
+    transform: translateX(20%);
+    padding: 15px;
+    margin-top: 20px;
+    position: absolute;
+    bottom: 80px;
+    /* left: 0; */
+  }
+  .accordion-container {
+    grid-template-columns: 1fr;
+  }
+  .question h5 {
+    font-size: 18px;
+    font-weight: 500px;
+  }
+  .question p {
+    font-size: 16px;
+  }
+  .open h5 {
+    font-size: 24px;
+  }
+  .open p {
+    font-size: 18px;
+  }
+  .accd {
+    font-size: 42px;
+  }
+  .features-container {
+    grid-template-columns: 1fr;
+  }
+  .business-feature {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
